[FEATURE] Changed layout of the show view of the template and the list view of the taskgroup

--- a/Resources/Private/Templates/Taskgroup/List.html
+++ b/Resources/Private/Templates/Taskgroup/List.html
@@ -1,32 +1,39 @@
-<ul id="taskgroupList">
+<div class="row" id="taskgroupList">
 	<f:for each="{taskgroups}" as="taskgroup" iteration="iterator">
-		<li>
-			<f:form class="hiddenFields" method="POST" name="shiftUpForm">
-				<f:form.hidden class="template" property="template" value="{template}" />
-				<f:form.hidden class="taskgroup" property="taskgroup" value="{taskgroup}" />
-			</f:form>
-			<h5><f:link.action action="show" controller="Taskgroup" arguments="{template: template, taskgroup: taskgroup}">{taskgroup.name}</f:link.action>
-			<f:link.action action="edit" controller="Taskgroup" arguments="{template: template, taskgroup: taskgroup}" class="btn btn-mini btn-info">
-				Edit
-			</f:link.action>
-			<span class="shiftIcons">
-				<f:if condition="{iterator.isFirst}">
-					<f:else>
-						<span class="shiftUpTaskgroup">
-							<img src="{f:uri.resource(path:'Icons/arrowUp.png')}" />
-						</span>
-					</f:else>
-				</f:if>
+		<f:form class="hiddenFields" method="POST" name="shiftUpForm">
+			<f:form.hidden class="template" property="template" value="{template}" />
+			<f:form.hidden class="taskgroup" property="taskgroup" value="{taskgroup}" />
+		</f:form>
+		<h5>
+			<div class="span3">
+				<f:link.action action="show" controller="Taskgroup" arguments="{template: template, taskgroup: taskgroup}">
+					{taskgroup.name}
+				</f:link.action>
+			</div>
+			<div class="span1">
+				<f:link.action action="edit" controller="Taskgroup" arguments="{template: template, taskgroup: taskgroup}" class="btn btn-mini btn-info">
+					Edit
+				</f:link.action>
+			</div>
+			<div class="span2">
+				<span class="shiftIcons">
+					<f:if condition="{iterator.isFirst}">
+						<f:else>
+							<span class="shiftUpTaskgroup">
+								<img src="{f:uri.resource(path:'Icons/arrowUp.png')}" />
+							</span>
+						</f:else>
+					</f:if>
 
-				<f:if condition="{iterator.isLast}">
-					<f:else>
-						<span class="shiftDownTaskgroup">
-							<img src="{f:uri.resource(path:'Icons/arrowDown.png')}" />
-						</span>
-					</f:else>
-				</f:if>
-			</span>
-			</h5>
-		</li>
+					<f:if condition="{iterator.isLast}">
+						<f:else>
+							<span class="shiftDownTaskgroup">
+								<img src="{f:uri.resource(path:'Icons/arrowDown.png')}" />
+							</span>
+						</f:else>
+					</f:if>
+				</span>
+			</div>
+		</h5>
 	</f:for>
-</ul>
+</div>
