--- a/Resources/Public/CSS/tick.less
+++ b/Resources/Public/CSS/tick.less
@@ -2,17 +2,10 @@ body {
 	padding-top: 50px;
 }
 
-#newTemplateForm {
-	display: none;
-	margin-top: 10px;
-}
-
-#newTaskgroupForm {
-	display: none;
-	margin-top: 10px;
-}
-
-#newTaskForm {
+#newTemplateForm,
+#newTaskgroupForm,
+#newTaskForm,
+#newChecklistForm {
 	display: none;
 	margin-top: 10px;
 }
