--- a/Resources/Public/CSS/tick.less
+++ b/Resources/Public/CSS/tick.less
@@ -30,3 +30,28 @@ body {
 .taskEntry {
 	overflow: hidden;
 }
+
+#checklist .taskgroupWrapper,
+#checklist #backLink {
+	margin: 20px 0 0 0;
+}
+
+#checklist .taskgroupWrapper,
+#checklist .taskWrapper {
+	clear: both;
+	overflow: hidden;
+}
+
+#checklist .tick,
+#checklist .task {
+	float: left;
+}
+
+#checklist .task {
+	margin: 0 0 0 20px;
+}
+
+#checklist .unticked img,
+#checklist .ticked img {
+	width: 20px;
+}
